//  Copyright (c) 2018 Minoru Osuka
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// 		http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";

package protobuf;

option go_package = "protobuf";

service Data {
    rpc PutNode (PutNodeRequest) returns (google.protobuf.Empty) {}
    rpc GetNode (GetNodeRequest) returns (GetNodeResponse) {}
    rpc DeleteNode (DeleteNodeRequest) returns (google.protobuf.Empty) {}

    rpc GetCluster (google.protobuf.Empty) returns (GetClusterResponse) {}

    rpc Snapshot (google.protobuf.Empty) returns (google.protobuf.Empty) {}

    rpc PutDocument (PutDocumentRequest) returns (google.protobuf.Empty) {}
    rpc GetDocument (GetDocumentRequest) returns (GetDocumentResponse) {}
    rpc DeleteDocument (DeleteDocumentRequest) returns (google.protobuf.Empty) {}

    rpc BulkUpdate(BulkUpdateRequest) returns (BulkUpdateResponse) {}

    rpc SearchDocuments (SearchDocumentsRequest) returns (SearchDocumentsResponse) {}
}

// ----------------------------------------

message Metadata {
    string id = 1;
    string raft_addr = 2;
    string grpc_addr = 3;
    string http_addr = 4;
}

// ----------------------------------------

message Node {
    enum Activity {
        UNKNOWN_ACTIVITY = 0;
        ACTIVE = 1;
        INACTIVE = 2;
    }
    enum Health {
        UNKNOWN_HEALTH = 0;
        HEALTHY = 1;
        UNHEALTHY = 2;
    }
    string id = 1;
    string raft_addr = 2;
    string grpc_addr = 3;
    string http_addr = 4;
    bool leader = 5;
    Activity activity = 6;
    Health health = 7;
}

message Cluster {
    enum Health {
        UNKNOWN_HEALTH = 0;
        HEALTHY = 1;
        UNHEALTHY = 2;
    }
    repeated Node nodes = 1;
    Health health = 2;
}

// ----------------------------------------

message PutNodeRequest {
    string id = 1;
    string raft_addr = 2;
    string grpc_addr = 3;
    string http_addr = 4;
}

message GetNodeRequest {
    string id = 1;
}

message GetNodeResponse {
    Node node = 1;
}

message DeleteNodeRequest {
    string id = 1;
    string raft_addr = 2;
}

// ----------------------------------------

message GetClusterResponse {
    Cluster cluster = 1;
}

// ----------------------------------------

message Document {
    string id = 1;
    google.protobuf.Any fields = 2;
}

// ----------------------------------------

message PutDocumentRequest {
    string id = 1;
    google.protobuf.Any fields = 2;
}

message GetDocumentRequest {
    string id = 1;
}

message GetDocumentResponse {
    Document document = 1;
}

message DeleteDocumentRequest {
    string id = 1;
}

// ----------------------------------------

message BulkUpdateRequest {
    message Update {
        enum Command {
            UNKNOWN = 0;
            PUT = 1;
            DELETE = 2;
        }
        Command command = 1;
        Document document = 2;
    }
    int32 batch_size = 1;
    repeated Update updates = 2;
}

message BulkUpdateResponse {
    int32 put_count = 1;
    int32 delete_count = 2;
}

// ----------------------------------------

message SearchDocumentsRequest {
    google.protobuf.Any search_request = 1;
}

message SearchDocumentsResponse {
    google.protobuf.Any search_result = 1;
}

// ----------------------------------------

message Proposal {
    enum Type {
        UNKNOWN_PROPOSAL = 0;
        PUT_METADATA = 1;
        DELETE_METADATA = 2;
        PUT_DOCUMENT = 3;
        DELETE_DOCUMENT = 4;
        BULK_UPDATE = 5;
    }
    Type type = 1;
    google.protobuf.Any data = 2;
}